--- a/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlCaixa.xaml
@@ -308,15 +308,21 @@
                         </Grid.RowDefinitions>
                         <DataGrid x:Name="DataGridAReceber" Grid.Row="0" AutoGenerateColumns="False" IsReadOnly="True">
                             <DataGrid.Columns>
+                                <DataGridTextColumn Header="Tipo" Binding="{Binding Conta.TipoConta}" />
                                 <DataGridTextColumn Header="Valor" Binding="{Binding ValorParcela, StringFormat='#,##0.00',  ConverterCulture='pt-BR'}" />
                                 <DataGridTextColumn Header="Pessoa" Binding="{Binding Conta.Pessoa}" />
                                 <DataGridTextColumn Header="Data" Binding="{Binding DataVencimento, StringFormat=d,  ConverterCulture='pt-BR'}" />
                                 <DataGridTextColumn Header="Conta" Binding="{Binding Conta.Nome}" />
-
                             </DataGrid.Columns>
+                            <DataGrid.ContextMenu>
+                                <ContextMenu>
+                                    <MenuItem x:Name="MenuItemAddTudoCaixa" Header="Adicionar todos ao caixa" Click="MenuItemAddTudoCaixa_Click"/>
+                                    <MenuItem x:Name="MenuItemAddItemSelecionado" Header="Adicionar item selecionado ao caixa" Click="MenuItemAddItemSelecionado_Click"/>
+                                </ContextMenu>
+                            </DataGrid.ContextMenu>
                         </DataGrid>
 
-                        <TextBlock x:Name="txtTotalAReceber"
+                        <TextBlock x:Name="txtTotalAReceberPessoa"
                                 Grid.Row="1"
                                        Text="TOTAL: R$ 0,00"
                                        FontFamily="Champagne &amp; Limousines" 
