--- a/CFP.App/Formularios/Financeiros/UserControlHoraExtra.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlHoraExtra.xaml
@@ -77,35 +77,31 @@
 
         </Grid>
         <Grid x:Name="GridCampos" Grid.Row="1" Background="LightGray">
-            <Grid.RowDefinitions>
-                <RowDefinition Height="140"/>
-                <RowDefinition Height="360"/>
-            </Grid.RowDefinitions>
-            <Grid Grid.Row="0" Margin="20 0 20 20">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="300"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            <Grid Grid.Column="0">
                 <Grid.RowDefinitions>
-                    <RowDefinition/>
-                    <RowDefinition/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="55"/>
+                    <RowDefinition Height="*"/>
                 </Grid.RowDefinitions>
-                <Grid  Grid.Row="0">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="600"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <TextBox x:Name="txtNome"
-                             Grid.Column="0"
-                             materialDesign:HintAssist.Hint="Descricão" 
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                             FontFamily="Champagne &amp; Limousines" 
-                             FontSize="22" 
-                             Foreground="#FF1F3D68" 
-                             HorizontalAlignment="Stretch"
-                             VerticalAlignment="Center"
-                             Margin="5"/>
-
-                    <ComboBox x:Name="cmbPessoa"
-                               Grid.Column="1"
-                              Grid.ColumnSpan="2"
-                              materialDesign:HintAssist.Hint="Pessoa" 
+                <ComboBox x:Name="cmbPessoa"
+                          materialDesign:HintAssist.Hint="Pessoa" 
+                          Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
+                          FontFamily="Champagne &amp; Limousines" 
+                          FontSize="20"
+                          Foreground="#FF1F3D68" 
+                          VerticalAlignment="Center"
+                          HorizontalAlignment="Stretch"
+                          Margin="5"/>
+                <ComboBox x:Name="cmbPeriodoDia"
+                              Grid.Row="1"
+                              materialDesign:HintAssist.Hint="Peróodo do dia" 
                               Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                               FontFamily="Champagne &amp; Limousines" 
                               FontSize="20"
@@ -113,21 +109,9 @@
                               VerticalAlignment="Center"
                               HorizontalAlignment="Stretch"
                               Margin="5"/>
-                </Grid>
-               
 
-                <Grid Grid.Row="1">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="150"/>
-                        <ColumnDefinition Width="*"/>
-                    </Grid.ColumnDefinitions>
-                    <DatePicker x:Name="txtDataHoraExtra"
-                                Grid.Column="0"
+                <DatePicker x:Name="txtDataHoraExtra"
+                                 Grid.Row="2"
                                 materialDesign:HintAssist.Hint="Data" 
                                 Style="{StaticResource MaterialDesignFloatingHintDatePicker}" 
                                 FontFamily="Champagne &amp; Limousines" 
@@ -136,10 +120,10 @@
                                 VerticalAlignment="Stretch"
                         Margin="5"/>
 
-                    <materialDesign:TimePicker x:Name="txtHoraInicio"
-                                               Grid.Column="1"
+                <materialDesign:TimePicker x:Name="txtHoraInicio"
+                                               Grid.Row="3"
                                                Style="{StaticResource MaterialDesignFloatingHintTimePicker}"
-                                               materialDesign:HintAssist.Hint="Início Manhã"
+                                               materialDesign:HintAssist.Hint="Início"
                                                FontFamily="Champagne &amp; Limousines" 
                                                FontSize="18"
                                                Foreground="#FF1F3D68" 
@@ -148,10 +132,10 @@
                                                Margin="5"
                                                Is24Hours="True" SelectedTimeFormat="Long"/>
 
-                    <materialDesign:TimePicker x:Name="txtHoraFinal"
-                                               Grid.Column="2"
+                <materialDesign:TimePicker x:Name="txtHoraFinal"
+                                               Grid.Row="4"
                                                Style="{StaticResource MaterialDesignFloatingHintTimePicker}"
-                                               materialDesign:HintAssist.Hint="Final Manhã"
+                                               materialDesign:HintAssist.Hint="Final"
                                                FontFamily="Champagne &amp; Limousines" 
                                                FontSize="18"
                                                Foreground="#FF1F3D68" 
@@ -160,51 +144,22 @@
                                                Margin="5"
                                                Is24Hours="True" SelectedTimeFormat="Long"/>
 
-                    <materialDesign:TimePicker x:Name="txtHoraInicioTarde"
-                                               Grid.Column="3"
-                                               Style="{StaticResource MaterialDesignFloatingHintTimePicker}"
-                                               materialDesign:HintAssist.Hint="Início Tarde"
-                                               FontFamily="Champagne &amp; Limousines" 
-                                               FontSize="18"
-                                               Foreground="#FF1F3D68" 
-                                               VerticalAlignment="Stretch"
-                                               HorizontalAlignment="Stretch"
-                                               Margin="5"
-                                               Is24Hours="True" SelectedTimeFormat="Long"/>
-
-                    <materialDesign:TimePicker x:Name="txtHoraFinalTarde"
-                                               Grid.Column="4"
-                                               Style="{StaticResource MaterialDesignFloatingHintTimePicker}"
-                                               materialDesign:HintAssist.Hint="Final Tarde"
-                                               FontFamily="Champagne &amp; Limousines" 
-                                               FontSize="18"
-                                               Foreground="#FF1F3D68" 
-                                               VerticalAlignment="Stretch"
-                                               HorizontalAlignment="Stretch"
-                                               Margin="5"
-                                               Is24Hours="True" SelectedTimeFormat="Long"/>
-
-                    <Button x:Name="btAdd"
-                            Grid.Column="6"
-                            Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
-                            HorizontalAlignment="Stretch"
-                            VerticalAlignment="Stretch"
-                            Background="#FF1F3D68" 
-                            BorderBrush="#FF1F3D68"
-                            Height="60"
-                            Width="60" Click="btAdd_Click">
-                        <materialDesign:PackIcon 
-                            Kind="Check"  
-                            Width="50" 
-                            Height="50"/>
-                    </Button>
-
-                </Grid>
+                <TextBox x:Name="txtDescricao"
+                             Grid.Row="5"
+                             materialDesign:HintAssist.Hint="Descricão" 
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                             FontFamily="Champagne &amp; Limousines" 
+                             FontSize="22" 
+                             Foreground="#FF1F3D68" 
+                             HorizontalAlignment="Stretch"
+                             VerticalAlignment="Stretch"
+                             Margin="5"
+                             />
             </Grid>
-            <Grid Grid.Row="1" Margin="20 -10 20 40">
+            <Grid Grid.Column="1">
                 <DataGrid x:Name="dgHoraExtra"
                           AutoGenerateColumns="False" 
-                          IsReadOnly="True">
+                          IsReadOnly="True" Margin="5">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Data" Binding="{Binding DataHoraExtra, StringFormat=d,  ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Inicio manha" Binding="{Binding HoraInicioManha, ConverterCulture='pt-BR'}" />
@@ -212,6 +167,8 @@
                         <DataGridTextColumn Header="Total Manhã" Binding="{Binding TotalManha, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Inicio Tarde" Binding="{Binding HoraInicioTarde, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Final Tarde" Binding="{Binding HoraFinalTarde, ConverterCulture='pt-BR'}" />
+                        <DataGridTextColumn Header="Inicio Noite" Binding="{Binding HoraInicioNoite, ConverterCulture='pt-BR'}" />
+                        <DataGridTextColumn Header="Final Noite" Binding="{Binding HoraFinalNoite, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Total Tarde" Binding="{Binding TotalTarde, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Total Dia" Binding="{Binding HoraFinalDia, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Descricão" Binding="{Binding Nome, ConverterCulture='pt-BR'}" />
