--- a/CFP.App/Formularios/Financeiros/UserControlHoraExtra.xaml
+++ b/CFP.App/Formularios/Financeiros/UserControlHoraExtra.xaml
@@ -31,7 +31,87 @@
                 <ColumnDefinition/>
                 <ColumnDefinition/>
             </Grid.ColumnDefinitions>
+            <TextBox x:Name="txtCodigo"
+                             Grid.Column="0"
+                             Grid.ColumnSpan="2"
+                             materialDesign:HintAssist.Hint="Código" 
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                             FontFamily="Champagne &amp; Limousines" 
+                             FontSize="17" 
+                             Foreground="DarkGray" 
+                             HorizontalAlignment="Stretch"
+                             VerticalAlignment="Center"
+                             IsReadOnly="True"
+                             Margin="5"/>
 
+            <DatePicker x:Name="txtInicio"
+                        Grid.Column="2"
+                        Grid.ColumnSpan="2"
+                        FontSize="17"
+                        materialDesign:HintAssist.Hint="Início" 
+                        Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
+                        VerticalAlignment="Center"
+                        Foreground="DarkGray"
+                        Margin="5,11,5,13.4" Height="46" KeyDown="txtInicio_KeyDown"/>
+
+            <DatePicker x:Name="txtFinal"
+                        Grid.Column="4"
+                        Grid.ColumnSpan="2"
+                        FontSize="17"
+                        materialDesign:HintAssist.Hint="Final" 
+                        Style="{StaticResource MaterialDesignFloatingHintDatePicker}"
+                        VerticalAlignment="Center"
+                        Foreground="DarkGray"
+                        Margin="5,11,5,13.4" Height="46" KeyDown="txtFinal_KeyDown"/>
+
+            <ComboBox x:Name="cmbFiltroPessoa"
+                      Grid.Column="6"
+                      Grid.ColumnSpan="3" 
+                      Style="{StaticResource MaterialDesignFloatingHintComboBox}"
+                      materialDesign:HintAssist.Hint="Pessoa"
+                      FontFamily="Champagne &amp; Limousines"
+                      FontSize="17"
+                      VerticalAlignment="Center"
+                      Foreground="DarkGray"
+                      Margin="5" KeyDown="cmbFiltroPessoa_KeyDown"/>
+
+            <TextBlock x:Name="lblTotalGeralHoras" 
+                        Grid.Column="9"
+                        Grid.ColumnSpan="2"
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="Center" 
+                       FontSize="15"
+                      Foreground="White"
+                       Margin="5,5,0,0"/>
+            
+            <Button x:Name="btFiltro"
+                    Grid.Column="11"
+                    Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
+                    Height="60" Width="60" 
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Background="#FF1F3D68" 
+                    BorderBrush="#FF1F3D68"
+                    ToolTip="Botão filtrar contas em geral" Click="btFiltro_Click" >
+                <materialDesign:PackIcon 
+                    Kind="FilterOutline"  
+                    Width="50" 
+                    Height="50"/>
+            </Button>
+            <Button x:Name="btAdd"
+                    Grid.Column="12"
+                    Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
+                    Height="60" Width="60" 
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    Background="#FF1F3D68" 
+                    BorderBrush="#FF1F3D68"
+                    ToolTip="Adicionar um novo registro" Click="btAdd_Click">
+                <materialDesign:PackIcon 
+                    Kind="Add"  
+                    Width="50" 
+                    Height="50"/>
+            </Button>
             <Button x:Name="btSalvar"
                     Grid.Column="13"
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
@@ -40,21 +120,24 @@
                     VerticalAlignment="Center"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Salvar">
+                    ToolTip="Salvar" Click="btSalvar_Click">
                 <materialDesign:PackIcon 
                     Kind="ContentSave"  
                     Width="50" 
                     Height="50"/>
             </Button>
-            <Button x:Name="btexcluir"
+            <Button x:Name="btExcluir"
                     Grid.Column="14"
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
                     Height="60" Width="60" 
                     HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
+                    VerticalAlignment="Bottom"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Botão para Excluir">
+                    ToolTip="Botão para Excluir" 
+                    Margin="1.4,0,1.8,5.4" 
+                    Click="btExcluir_Click"
+                    IsEnabled="False">
                 <materialDesign:PackIcon 
                     Kind="Trash"  
                     Width="50" 
@@ -63,12 +146,10 @@
             <Button x:Name="btSair"
                     Grid.Column="15"
                     Style="{StaticResource MaterialDesignFloatingActionMiniDarkButton}" 
-                    Height="60" Width="60" 
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
+                    Height="Auto" Width="Auto"
                     Background="#FF1F3D68" 
                     BorderBrush="#FF1F3D68"
-                    ToolTip="Botão para sair da tela" >
+                    ToolTip="Botão para sair da tela" Margin="1.2,5,2,5.4" Click="btSair_Click" >
                 <materialDesign:PackIcon 
                     Kind="ExitToApp"  
                     Width="50" 
@@ -77,89 +158,106 @@
 
         </Grid>
         <Grid x:Name="GridCampos" Grid.Row="1" Background="LightGray">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="300"/>
-                <ColumnDefinition Width="*"/>
-            </Grid.ColumnDefinitions>
-            <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="120"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
+            <Grid x:Name="GridControls" IsEnabled="False" Grid.Row="0">
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="55"/>
-                    <RowDefinition Height="55"/>
-                    <RowDefinition Height="55"/>
-                    <RowDefinition Height="55"/>
-                    <RowDefinition Height="55"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition/>
+                    <RowDefinition/>
                 </Grid.RowDefinitions>
-                <ComboBox x:Name="cmbPessoa"
+                <Grid Grid.Row="0">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="600"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+                    <TextBox x:Name="txtDescricao"
+                             Grid.Column="0"
+                             materialDesign:HintAssist.Hint="Descricão" 
+                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
+                             FontFamily="Champagne &amp; Limousines" 
+                             FontSize="17" 
+                             Foreground="#FF1F3D68" 
+                             HorizontalAlignment="Stretch"
+                             VerticalAlignment="Center"
+                             Margin="5"/>
+
+                    <ComboBox x:Name="cmbPessoa"
+                              Grid.Column="1"
                           materialDesign:HintAssist.Hint="Pessoa" 
                           Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                           FontFamily="Champagne &amp; Limousines" 
-                          FontSize="20"
+                          FontSize="17"
                           Foreground="#FF1F3D68" 
                           VerticalAlignment="Center"
                           HorizontalAlignment="Stretch"
                           Margin="5"/>
-                <ComboBox x:Name="cmbPeriodoDia"
-                              Grid.Row="1"
-                              materialDesign:HintAssist.Hint="Peróodo do dia" 
+                </Grid>
+
+                <Grid Grid.Row="1">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="150"/>
+                        <ColumnDefinition Width="*"/>
+                    </Grid.ColumnDefinitions>
+
+                    <ComboBox x:Name="cmbPeriodoDia"
+                              Grid.Column="0"
+                              materialDesign:HintAssist.Hint="Período do dia" 
                               Style="{StaticResource MaterialDesignFloatingHintComboBox}" 
                               FontFamily="Champagne &amp; Limousines" 
-                              FontSize="20"
+                              FontSize="17"
                               Foreground="#FF1F3D68" 
                               VerticalAlignment="Center"
                               HorizontalAlignment="Stretch"
                               Margin="5"/>
 
-                <DatePicker x:Name="txtDataHoraExtra"
-                                 Grid.Row="2"
+                    <DatePicker x:Name="txtDataHoraExtra"
+                                Grid.Column="1"
                                 materialDesign:HintAssist.Hint="Data" 
                                 Style="{StaticResource MaterialDesignFloatingHintDatePicker}" 
                                 FontFamily="Champagne &amp; Limousines" 
-                                FontSize="18" 
+                                FontSize="17" 
                                 Foreground="#FF1F3D68"
                                 VerticalAlignment="Stretch"
-                        Margin="5"/>
+                        Margin="4.6,5,4.8,8"/>
 
-                <materialDesign:TimePicker x:Name="txtHoraInicio"
-                                               Grid.Row="3"
+                    <materialDesign:TimePicker x:Name="txtHoraInicio"
+                                               Grid.Column="2"
                                                Style="{StaticResource MaterialDesignFloatingHintTimePicker}"
                                                materialDesign:HintAssist.Hint="Início"
                                                FontFamily="Champagne &amp; Limousines" 
-                                               FontSize="18"
+                                               FontSize="17"
                                                Foreground="#FF1F3D68" 
                                                VerticalAlignment="Stretch"
                                                HorizontalAlignment="Stretch"
-                                               Margin="5"
+                                               Margin="5.2,5,4.8,8"
                                                Is24Hours="True" SelectedTimeFormat="Long"/>
 
-                <materialDesign:TimePicker x:Name="txtHoraFinal"
-                                               Grid.Row="4"
+                    <materialDesign:TimePicker x:Name="txtHoraFinal"
+                                               Grid.Column="3"
                                                Style="{StaticResource MaterialDesignFloatingHintTimePicker}"
                                                materialDesign:HintAssist.Hint="Final"
                                                FontFamily="Champagne &amp; Limousines" 
-                                               FontSize="18"
+                                               FontSize="17"
                                                Foreground="#FF1F3D68" 
                                                VerticalAlignment="Stretch"
                                                HorizontalAlignment="Stretch"
-                                               Margin="5"
+                                               Margin="5.2,5,3.8,8"
                                                Is24Hours="True" SelectedTimeFormat="Long"/>
-
-                <TextBox x:Name="txtDescricao"
-                             Grid.Row="5"
-                             materialDesign:HintAssist.Hint="Descricão" 
-                             Style="{StaticResource MaterialDesignFloatingHintTextBox}" 
-                             FontFamily="Champagne &amp; Limousines" 
-                             FontSize="22" 
-                             Foreground="#FF1F3D68" 
-                             HorizontalAlignment="Stretch"
-                             VerticalAlignment="Stretch"
-                             Margin="5"
-                             />
+                </Grid>
             </Grid>
-            <Grid Grid.Column="1">
+            <Grid Grid.Row="1">
                 <DataGrid x:Name="dgHoraExtra"
                           AutoGenerateColumns="False" 
-                          IsReadOnly="True" Margin="5">
+                          VerticalScrollBarVisibility="Visible"
+                          HorizontalScrollBarVisibility="Visible"
+                          IsReadOnly="True" 
+                          Margin="5,5,5,40" 
+                          MouseDoubleClick="dgHoraExtra_MouseDoubleClick">
                     <DataGrid.Columns>
                         <DataGridTextColumn Header="Data" Binding="{Binding DataHoraExtra, StringFormat=d,  ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Inicio manha" Binding="{Binding HoraInicioManha, ConverterCulture='pt-BR'}" />
@@ -167,12 +265,13 @@
                         <DataGridTextColumn Header="Total Manhã" Binding="{Binding TotalManha, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Inicio Tarde" Binding="{Binding HoraInicioTarde, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Final Tarde" Binding="{Binding HoraFinalTarde, ConverterCulture='pt-BR'}" />
+                        <DataGridTextColumn Header="Total Tarde" Binding="{Binding TotalTarde, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Inicio Noite" Binding="{Binding HoraInicioNoite, ConverterCulture='pt-BR'}" />
                         <DataGridTextColumn Header="Final Noite" Binding="{Binding HoraFinalNoite, ConverterCulture='pt-BR'}" />
-                        <DataGridTextColumn Header="Total Tarde" Binding="{Binding TotalTarde, ConverterCulture='pt-BR'}" />
-                        <DataGridTextColumn Header="Total Dia" Binding="{Binding HoraFinalDia, ConverterCulture='pt-BR'}" />
-                        <DataGridTextColumn Header="Descricão" Binding="{Binding Nome, ConverterCulture='pt-BR'}" />
-
+                        <DataGridTextColumn Header="Total Noite" Binding="{Binding TotalNoite, ConverterCulture='pt-BR'}" />
+                        <DataGridTextColumn Header="Hora Extra" Binding="{Binding HoraFinalDia, ConverterCulture='pt-BR'}" />
+                        <DataGridTextColumn Header="Descricão" Binding="{Binding Nome}"/>
+                        <DataGridTextColumn Header="Pessoa" Binding="{Binding Pessoa.Nome}"/>
                     </DataGrid.Columns>
                 </DataGrid>
             </Grid>
