--- a/CFP.App/Formularios/Financeiros/TelasConfirmacoes/EntradaSaidaManual.xaml
+++ b/CFP.App/Formularios/Financeiros/TelasConfirmacoes/EntradaSaidaManual.xaml
@@ -8,7 +8,7 @@
         mc:Ignorable="d"
         ResizeMode="NoResize"
         Title="EntradaSaidaManual" 
-        Height="200" Width="350" 
+        Height="280" Width="350" 
         WindowStartupLocation="CenterScreen"
         WindowStyle="None" Loaded="Window_Loaded">
     <Grid >
@@ -17,10 +17,17 @@
                 <RowDefinition Height="130"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <Grid Grid.Row="0" Background="#FF1F3D68"/>
+            <Grid Grid.Row="0" Background="#FF1F3D68">
+                <TextBlock x:Name="lblNomeTela" Text="Entrada/Saída Manual do Caixa" 
+                       HorizontalAlignment="Center" 
+                       VerticalAlignment="top" 
+                       FontSize="15"
+                      Foreground="White"
+                       Margin="0,10,0,0"/>
+            </Grid>
             <Grid Grid.Row="1" Background="LightSlateGray"/>
         </Grid>
-        <Border Margin="10"  
+        <Border Margin="10 40 10 10"  
                     Background="LightGray" 
                     Opacity="0.9"
                     CornerRadius="30"
