--- a/CFP.App/Formularios/Principais/Principal.xaml
+++ b/CFP.App/Formularios/Principais/Principal.xaml
@@ -5,13 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:CFP.App"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        mc:Ignorable="d" 
-        Height="600" Width="1080" 
+        mc:Ignorable="d" Width="1080" Height="550"
         ResizeMode="NoResize" 
         WindowStartupLocation="CenterScreen" 
         WindowStyle="None" 
         Foreground="White" 
-        Loaded="Principal_Loaded">
+        Loaded="Principal_Loaded" MouseLeftButtonDown="Principal_MouseLeftButtonDown">
 
     <Window.Resources>
         <Storyboard x:Key="MenuOpen">
@@ -57,13 +56,14 @@
                         <Button x:Name="ButtonUsuarios" Content="Usuários" Click="ButtonUsuarios_Click" />
                         <Button x:Name="ButtonBackup" Content="Backup" Click="ButtonBackup_Click" />
                         <Separator/>
+                        <Button x:Name="ButtonPopUpMax" Content="Maximizar" Click="ButtonPopUpMax_Click"/>
                         <Button x:Name="ButtonPopUpSair" Content="Sair" Click="ButtonPopUpSair_Click"/>
                     </StackPanel>
                 </materialDesign:PopupBox>
 
             </StackPanel>
 
-            <Grid Margin="60,50,0,-539" >
+            <Grid x:Name="gridConteudo" Margin="60,50,0,-490" >
                 <!--Botoes-->
                 <Grid x:Name="GridBotoesCadastros"  >
                     <Grid.RowDefinitions>
@@ -137,7 +137,7 @@
                                        Margin="5,5,0,0"/>
                             <!--Fim a pagar -->
 
-                            
+
                         </Grid>
                     </Border>
 
@@ -199,7 +199,8 @@
                         </Grid>
                     </Border>
 
-                    <!--Total--><!--
+                    <!--Total-->
+                    <!--
                     <Border Margin="10 20 10 10" 
                                 Grid.Column="4" Grid.ColumnSpan="2" 
                                 Background="Azure" 
@@ -215,7 +216,9 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
-                            --><!--A receber --><!--
+                            -->
+                    <!--A receber -->
+                    <!--
                             <Button x:Name="btVisualizarTotal"
                                     Style="{StaticResource MaterialDesignFloatingActionDarkButton}" 
                                     Height="90" Width="90"
@@ -249,7 +252,9 @@
                                        Style="{StaticResource MaterialDesignTextBlock}"
                                        Foreground="#FF1F3D68"
                                        Margin="5,5,0,0"/>
-                            --><!--Fim a receber --><!--
+                            -->
+                    <!--Fim a receber -->
+                    <!--
 
 
                         </Grid>
@@ -314,7 +319,8 @@
                         </Grid>
                     </Border>
 
-                    <!--Backup--><!--
+                    <!--Backup-->
+                    <!--
                     <Border Margin="10 20 10 10" 
                             Grid.Row="1"
                                 Grid.Column="2" Grid.ColumnSpan="2" 
@@ -331,7 +337,9 @@
                                 <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
-                            --><!--Backup --><!--
+                            -->
+                    <!--Backup -->
+                    <!--
                             <Button x:Name="btBackup"
                                     Style="{StaticResource MaterialDesignFloatingActionDarkButton}" 
                                     Height="90" Width="90"
@@ -364,7 +372,9 @@
                                        Style="{StaticResource MaterialDesignTextBlock}"
                                        Foreground="#FF1F3D68"
                                        Margin="5,5,0,0"/>
-                            --><!--Fim Backup --><!--
+                            -->
+                    <!--Fim Backup -->
+                    <!--
 
 
                         </Grid>
@@ -431,8 +441,7 @@
 
                 </Grid>
                 <!--Fim Botoes-->
-                <Grid x:Name="GridPrincipal" HorizontalAlignment="Center" VerticalAlignment="Top" 
-                      Margin="0,10,0,0" Height="539" Width="1020" Grid.ColumnSpan="2"/>
+                <Grid x:Name="GridPrincipal" Margin="0,10,0,0"/>
             </Grid>
 
         </Grid>
@@ -512,7 +521,7 @@
                                        Margin="20 10"/>
                         </StackPanel>
                     </ListViewItem>
-                    
+
                     <ListViewItem x:Name="ListVIewItemCaixa" Height="60" >
                         <StackPanel Orientation="Horizontal" 
                                 ToolTip="Caixa">
